style/database.css
.seravo-wb-db-info-table {
  margin-bottom: 1rem;
}

.seravo-wb-db-info-table td {
  padding-right: 1rem;
}

.sr-navbar .optionboxes li {
  display: inline-block;
  margin-right: 1rem;
}

.sr-navbar .optionboxes li label {
  vertical-align: baseline;
}

#sr-from {
  margin-right: 1rem;
}

.sr_result_field {
  overflow-wrap: anywhere;
}

#search_replace_command {
  margin: 1rem 0;
}

span.dashicons-external {
  line-height: unset;
  padding-left: 3px;
}

@media only screen and (max-width: 1115px) {
  .label_buttons {
    display: block;
  }
  .to_button,
  .adminer_button {
    padding-top: 15px;
  }
  .optionboxes {
    padding-left: 10%;
  }
  .to_label {
    padding-right: 8%;
  }
  .from_label {
    padding-right: 8%;
  }
}

@media only screen and (max-width: 376px) {
  .pie_container {
    margin: -90px;
    overflow-wrap: break-word;
    padding-top: 90px;
    white-space: pre-line;
  }
  .section_chart_mobile {
    padding-bottom: 25%;
  }
  canvas {
    height: 198px!important;
    margin: auto;
    width: 253px!important;
  }
}

